--- a/Pipfile
+++ b/Pipfile
@@ -3,8 +3,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/cpu"
+verify_ssl = true
+name = "pytorch_cpu"
+
 [packages]
 requests = "*"
+torch = {version = "*", index = "pytorch_cpu"}
+torchvision = {version = "*", index = "pytorch_cpu"}
+torchaudio = {version = "*", index = "pytorch_cpu"}
 
 [dev-packages]
 autopep8 = "*"
