--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "reversi-game-py"]
-	path = reversi-game-py
+	path = reversi_game_py
 	url = git@github.com:AAAR-Salmon/reversi-game-py.git
