--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,25 +5,19 @@ description = "Neural-network-based AI of reversi"
 authors = ["AAAR-Salmon <https://github.com/AAAR-Salmon>"]
 license = "Apache-2.0"
 readme = "README.md"
-packages = [{include = "reversi_ai"}]
+packages = [{ include = "reversi_ai" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = {version = "*", source = "pypi"}
-torch = {version = "*", source = "pytorch_cpu"}
-torchvision = {version = "*", source = "pytorch_cpu"}
-torchaudio = {version = "*", source = "pytorch_cpu"}
-reversi-game = {git = "https://github.com/AAAR-Salmon/reversi-game-py"}
+requests = "~2.28"
+torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
+torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
+reversi-game = { git = "https://github.com/AAAR-Salmon/reversi-game-py" }
 
-
-[[tool.poetry.source]]
-name = "pytorch_cpu"
-url = "https://download.pytorch.org/whl/cpu"
-default = false
-secondary = true
-
-[tool.poetry.dev-dependencies]
-autopep8 = {version = "*", source = "pypi"}
+[tool.poetry.group.dev.dependencies]
+black = "~22.10"
+flake8 = "~5.0"
+isort = "~5.10"
 
 [build-system]
 requires = ["poetry-core"]
