--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{ include = "reversi_ai" }]
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "~2.28"
+numpy = "~1.23"
+scipy = "~1.9"
 torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
 torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
 reversi-game = { git = "https://github.com/AAAR-Salmon/reversi-game-py" }
